--- a/proyecto ecommerce/index.html
+++ b/proyecto ecommerce/index.html
@@ -21,24 +21,149 @@
     <a href="contacto.html">Contacto</a>
 </nav>
 
-<main>
-    <h2>Nuestros Productos</h2>
-    <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
-    </p>
-</main>
-
 <section>
     <h2>Categorías de Productos</h2>
-    <img src="img/categoria1.jpg" alt="Imagen Categoría"/>
+    <div>
+        <img src="img/categoria1.jpg" alt="Imagen Categoría"/>
+        <a href="">Oficina</a>
+    </div>
+    <div>
+        <img src="img/categoria2.jpg" alt="Imagen Categoría"/>
+        <a href="">Hogar</a>
+    </div>
+    <div>
+        <img src="img/categoria3.jpg" alt="Imagen Categoría"/>
+        <a href="">Cocina</a>
+    </div>
 </section>
 
+<section>
+    <h2>Sobre Nosotros</h2>
+    <div>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+        </p>
+    </div>
+</section>
+
+<main>
+    <h2>Nuestros Productos</h2>
+    <div>
+
+        <div>
+            <img src="img/producto1.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 1</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <div>
+            <img src="img/producto2.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 2</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <div>
+            <img src="img/producto3.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 3</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <div>
+            <img src="img/producto4.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 4</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <div>
+            <img src="img/producto5.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 5</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+        <div>
+            <img src="img/producto6.jpg" alt="Imagen Producto"/>
+            <div>
+                <h3>Producto 6</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                </p>
+                <p>$1,000,000.00</p>
+                <a href="">Agregar al carrito</a>
+            </div>
+        </div>
+
+    </div>
+</main>
+
+
 <footer>
+
+    <div>
+        <h3>Categorias</h3>
+        <nav>
+            <a href="">Cocina</a>
+            <a href="">Oficina</a>
+            <a href="">Jardin</a>
+            <a href="">Cochera</a>
+            <a href="">Dormitorios</a>
+        </nav>
+    </div>
+
+    <div>
+        <h3>Sobre Nosotros</h3>
+        <nav>
+            <a href="">Nuestra Historia</a>
+            <a href="">Mision, Vision y Valores</a>
+            <a href="">Carreras</a>
+            <a href="">Politicas de Privacidad</a>
+            <a href="">Términos del servicio</a>
+        </nav>
+    </div>
+
+    <div>
+        <h3>Soporte</h3>
+        <a href="">Preguntas Frecuentes</a>
+        <a href="">Ayuda en Linea</a>
+        <a href="">Confianza y Seguridad</a>
+    </div>
+
     <p>Todos los Derechos Reservados.TiendaMuebles</p>
 </footer>
 </body>
