--- a/proyecto ecommerce/index.html
+++ b/proyecto ecommerce/index.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="vieport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo HTML</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
 <header>
-    <h1>Tienda Muebles</h1>
+    <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
 </header>
 
-<nav>
-    <a href="index.html">Inicio</a>
-    <a href="nosotros.html">Nosotros</a>
-    <a href="tienda.html">Tienda</a>
-    <a href="blog.html">Blog</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contacto.html">Contacto</a>
-</nav>
+<div class="contenedor-navegacion">
+    <nav class="navegacion-principal contenedor">
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="blog.html">Blog</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
+</div>
 
+<div class="hero"></div>
 <section>
-    <h2>Categorías de Productos</h2>
+    <h2>Categorías de <span>Productos</span></h2>
     <div>
         <img src="img/categoria1.jpg" alt="Imagen Categoría"/>
         <a href="">Oficina</a>
@@ -37,7 +42,7 @@
     </div>
 </section>
 
-<section>
+<section class="sobre-nosotros">
     <h2>Sobre Nosotros</h2>
     <div>
         <p>
@@ -137,7 +142,7 @@
 
     <div>
         <h3>Categorias</h3>
-        <nav>
+        <nav id="navegacion">
             <a href="">Cocina</a>
             <a href="">Oficina</a>
             <a href="">Jardin</a>
@@ -148,7 +153,7 @@
 
     <div>
         <h3>Sobre Nosotros</h3>
-        <nav>
+        <nav class="navegacion">
             <a href="">Nuestra Historia</a>
             <a href="">Mision, Vision y Valores</a>
             <a href="">Carreras</a>
@@ -159,9 +164,11 @@
 
     <div>
         <h3>Soporte</h3>
-        <a href="">Preguntas Frecuentes</a>
-        <a href="">Ayuda en Linea</a>
-        <a href="">Confianza y Seguridad</a>
+        <nav>
+            <a href="">Preguntas Frecuentes</a>
+            <a href="">Ayuda en Linea</a>
+            <a href="">Confianza y Seguridad</a>
+        </nav>
     </div>
 
     <p>Todos los Derechos Reservados.TiendaMuebles</p>
