--- a/proyecto ecommerce/index.html
+++ b/proyecto ecommerce/index.html
@@ -6,6 +6,9 @@
     <meta name="vieport" content="width=device-width, initial-scale=1.0">
     <title>Aprendiendo HTML</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -26,19 +29,23 @@
 </div>
 
 <div class="hero"></div>
-<section>
+
+<section class="contenedor categorias">
     <h2>Categorías de <span>Productos</span></h2>
-    <div>
-        <img src="img/categoria1.jpg" alt="Imagen Categoría"/>
-        <a href="">Oficina</a>
-    </div>
-    <div>
-        <img src="img/categoria2.jpg" alt="Imagen Categoría"/>
-        <a href="">Hogar</a>
-    </div>
-    <div>
-        <img src="img/categoria3.jpg" alt="Imagen Categoría"/>
-        <a href="">Cocina</a>
+
+    <div class="listado-categorias">
+        <div class="categoria">
+            <img src="img/categoria1.jpg" alt="Imagen Categoría"/>
+            <a href="">Oficina</a>
+        </div>
+        <div class="categoria">
+            <img src="img/categoria2.jpg" alt="Imagen Categoría"/>
+            <a href="">Hogar</a>
+        </div>
+        <div class="categoria">
+            <img src="img/categoria3.jpg" alt="Imagen Categoría"/>
+            <a href="">Cocina</a>
+        </div>
     </div>
 </section>
 
